--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+# Core dependencies
 PyGithub>=1.55
 requests>=2.28.0
-# Choose your preferred AI provider - uncomment only what you need
+
+# AI providers - uncomment what you need
+# Uncomment the providers you want to use:
 google-generativeai>=0.3.0
 # openai>=0.27.0
 # anthropic>=0.18.0
